@@ -26,7 +26,7 @@
 # Versioning
 PRODUCT="Disaster Recovery Linux Manager"
 PROGRAM=${0##*/}
-VERSION=2.3.1
+VERSION=2.3.2
 RELEASE_DATE="Git"
 
 STARTTIME=$SECONDS
